first steps to base css

--- a/sass/03-regions/_regions-dir.scss
+++ b/sass/03-regions/_regions-dir.scss
@@ -1,6 +1,5 @@
 // /////////////////////////
-// @@ 
+// @@ REGIONS DIR
 // ////////////////////////
 
-@import "variables";
-@import "mixins";
+@import "header_front-page";
