frontpage mobile first add sections

--- a/sass/02-layout/_grid.scss
+++ b/sass/02-layout/_grid.scss
@@ -1,4 +1,8 @@
 // /////////////////////////
-// @@ FRONT PAGE
+// @@ GRID
 // ////////////////////////
 
+.container {
+  width: 85vw;
+  margin: 0 auto;
+}
