--- a/sass/03-regions/_regions-dir.scss
+++ b/sass/03-regions/_regions-dir.scss
@@ -3,3 +3,7 @@
 // ////////////////////////
 
 @import "header_front-page";
+@import "aboutus";
+@import "pups-expected";
+@import "our-pets";
+@import "footer";
