--- a/templates/index.html
+++ b/templates/index.html
@@ -1,37 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../dist/css/styles.css">
-  <title>De Bullensteeg</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link href="https://fonts.googleapis.com/css?family=Archivo|Archivo+Black" rel="stylesheet">
+        <link rel="stylesheet" href="../dist/css/styles.css">
+        <title>De Bullensteeg</title>
+    </head>
+    <body>
 
-  <header class="header">
-    <div class="header__top">
-      <div class="site__title">
-        De Bullensteeg
-      </div>
-      <div class="menu">
-        Menu
-      </div>
-    </div>
+        <header class="header">
+            <div class="header__top">
 
-      <div class="header__slogan">
-          Franse bulldoggen, grote liefde, passie en hobby.
-      </div>
-      <div class="header__cta">
-        Contacteer mij.
-      </div>
-      <div class="header__slogan-sub">
-          “Mijn honden gezondheid en karakter als prioriteit”
-      </div>
-      <div class="header__contact">
-          Marleen Halleng <br> marleenhalleng@gmail.com <br> Tel: (+32) 497 239 743 #1
-      </div>
-  </header>
-  
-</body>
+                <div class="site__name">
+                    <div class="heading">
+                        De Bullensteeg
+                    </div>
+                </div>
+
+                <div class="header__menu">
+                    Menu
+                </div>
+
+            </div>
+
+            <div class="container">
+                <div class="header__slogan">
+                    <h1 class="heading heading-first">
+                        Franse bulldoggen, grote liefde,
+                        <br>
+                        passie en hobby.
+                    </h1>
+                </div>
+                <div class="header__cta">
+                    <div class="btn btn--green">
+                        <a href="tel:011123456">Contacteer mij.</a>
+                    </div>
+                </div>
+                <div class="header__slogan-sub">
+                    <p>
+                        “Mijn honden gezondheid en karakter als prioriteit”
+                    </p>
+                </div>
+                <div class="header__contact">
+                    Marleen Halleng
+                    <br>
+                    marleenhalleng@gmail.com
+                    <br>
+                    Tel: (+32) 497 239 743 #1
+                </div>
+            </div>
+
+        </header>
+
+        <section class="aboutus">
+            <div class="aboutus__img">
+                <img src="../images/for_html/about-us.JPG" alt="about us image">
+            </div>
+
+            <div class="container">
+                <div class="aboutus__text">
+                    <h2 class="heading heading-second">
+                        Franse Bulldoggen, mijn leven.
+                    </h2>
+                    <p>
+                        Mijn naam is Halleng Marleen en de Franse Bulldog is in mijn leven gekomen in 2007 tijdens een periode dat ik ziek geworden ben. Ik had gezelschap nodig en daar is dit ras zeer geschikt voor.
+                    </p>
+                    <p>
+                        Ondertussen zijn we vele jaren later en zijn er een aantal bulldogjes bij ons gezin komen wonen.
+                    </p>
+                    <div class="read-more">
+                        <a href="#">Lees meer</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="aboutus__bcg"></div>
+
+        </section>
+
+        <div class="container">
+            <section class="pups-expected panel panel--taller">
+                <div class="pups-expected__img">
+                    <img src="../images/for_html/pups.jpg" alt="Pups">
+                </div>
+
+                <div class="pups-expected__wrapper">
+                    <div class="pups-expected__title">
+                        <div class="heading">
+                            Pups verwacht
+                        </div>
+                    </div>
+                    <div class="read-more">
+                        <a href="#">Lees meer</a>
+                    </div>
+
+                </div>
+            </section>
+
+            <section class="our-pets u-negative-margin-top">
+
+                <section class="our-pets__teven panel panel--small">
+                    <div class="teven__img">
+                        <img src="../images/for_html/teef1.JPG" alt="">
+                    </div>
+                    <div class="panel__inner">
+                        BULLENSTEEG--
+                        <h2 class="heading heading-second">Onze Teven</h2>
+                        <div class="read-more">
+                            <a href="#">Lees meer</a>
+                        </div>
+                    </div>
+
+                </section>
+
+                <section class="our-pets__reuen panel panel--small">
+                    <div class="reuen__img">
+                        <img src="../images/for_html/reu.JPG" alt="">
+                    </div>
+                    <div class="panel__inner">
+                        BULLENSTEEG--
+                        <h2 class="heading heading-second">Onze Reuen</h2>
+                        <div class="read-more">
+                            <a href="#">Lees meer</a>
+                        </div>
+                    </div>
+
+                </section>
+
+            </section>
+
+            <section class="news panel panel--taller">
+                News
+            </section>
+
+        </div>
+
+        <footer class="footer">
+            <div class="container">
+
+                <div class="footer__btn-contact">
+                    <a href="#">Contacteer mij</a>
+                </div>
+
+                <div class="footer_contact-information">
+                    Marleen Halleng
+                    <br>
+                    marleenhalleng@gmail.com
+                    <br>
+                    Tel: (+32) 497 239 743
+                </div>
+            </div>
+
+        </footer>
+
+    </body>
 </html>
