--- a/sass/00-abstracts/_variables.scss
+++ b/sass/00-abstracts/_variables.scss
@@ -11,3 +11,6 @@ $white: #FFFFFF;
 $black_gunmetal: #2C363F;
 $gray-spanish: #969A97;
 
+$base-font-size: 1.8rem;
+$heading-first: 6rem;
+$heading-second: 3.2rem;
