--- a/sass/01-base/_base.scss
+++ b/sass/01-base/_base.scss
@@ -23,6 +23,10 @@ body {
   background: $white_anti-flash;
 }
 
+p {
+  margin-bottom: 2rem;
+}
+
 a {
   text-decoration: none;
   color: $green-lighter;
@@ -32,4 +36,8 @@ a {
   &:hover {
     color: $green-main;
   }
+}
+
+img {
+  min-width: 100%;
 }
