--- a/sass/01-base/_typography.scss
+++ b/sass/01-base/_typography.scss
@@ -3,5 +3,35 @@
 // ////////////////////////
 
 body {
-  font-size: 1.6rem;
+  font-family: 'Archivo', sans-serif;
+  font-size: 1.8rem;
+  color: $black_gunmetal;
+  line-height: 2.5rem;
+}
+
+.heading {
+  font-family: 'Archivo Black', sans-serif;
+}
+
+.heading-first {
+  font-size: 4.2rem;
+  line-height: 5rem;
+}
+
+.heading-second {
+  font-size: 2.8rem;
+  margin-bottom: 4rem;
+}
+
+.site__name {
+  text-transform: uppercase;
+}
+
+
+.header {
+
+  &__slogan {
+
+  }
+
 }
