--- a/sass/01-base/_utilities.scss
+++ b/sass/01-base/_utilities.scss
@@ -6,6 +6,18 @@
   text-align: center;
 }
 
+.u-flex-align-right {
+  align-self: flex-end;
+}
+
 .u-negative-margin-top {
   margin-top: -3rem;
+}
+
+.u-margin-bottom {
+  margin-bottom: 2rem;
+}
+
+.u-full-width {
+  width: 100%;
 }
