--- a/sass/03-regions/_aboutus.scss
+++ b/sass/03-regions/_aboutus.scss
@@ -3,12 +3,13 @@
 // ////////////////////////
 
 .aboutus {
+  margin-bottom: 9rem;
 
   &__img {
     margin-bottom: 6rem;
   }
 
-  &__text {
+  &__text {  
 
   }
 }
