--- a/sass/04-components/_components-dir.scss
+++ b/sass/04-components/_components-dir.scss
@@ -3,4 +3,7 @@
 // ////////////////////////
 
 @import "buttons";
+@import "readmore";
 @import "panels";
+@import "contact-details";
+@import "site-name";
