--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,8 @@
         <header class="header">
             <div class="header__top">
 
-                <div class="site__name">
-                    <div class="heading">
-                        De Bullensteeg
-                    </div>
+                <div class="site__name heading">
+                    De Bullensteeg
                 </div>
 
                 <div class="header__menu">
@@ -34,16 +32,14 @@
                     </h1>
                 </div>
                 <div class="header__cta">
-                    <div class="btn btn--green">
-                        <a href="tel:011123456">Contacteer mij.</a>
-                    </div>
+                    <a href="tel:011123456" class="btn btn--green">Contacteer mij.</a>
                 </div>
                 <div class="header__slogan-sub">
                     <p>
                         “Mijn honden gezondheid en karakter als prioriteit”
                     </p>
                 </div>
-                <div class="header__contact">
+                <div class="contact-details contact-details--green contact-details--full-width">
                     Marleen Halleng
                     <br>
                     marleenhalleng@gmail.com
@@ -71,7 +67,7 @@
                         Ondertussen zijn we vele jaren later en zijn er een aantal bulldogjes bij ons gezin komen wonen.
                     </p>
                     <div class="read-more">
-                        <a href="#">Lees meer</a>
+                        <a class="read-more__link" href="#">Lees meer</a>
                     </div>
                 </div>
             </div>
@@ -82,6 +78,7 @@
 
         <div class="container">
             <section class="pups-expected panel panel--taller">
+
                 <div class="pups-expected__img">
                     <img src="../images/for_html/pups.jpg" alt="Pups">
                 </div>
@@ -93,64 +90,84 @@
                         </div>
                     </div>
                     <div class="read-more">
-                        <a href="#">Lees meer</a>
+                        <a href="#" class="read-more__link">Lees meer</a>
                     </div>
-
                 </div>
+
             </section>
 
             <section class="our-pets u-negative-margin-top">
 
-                <section class="our-pets__teven panel panel--small">
+                <div class="our-pets__teven panel panel--small">
+
                     <div class="teven__img">
                         <img src="../images/for_html/teef1.JPG" alt="">
                     </div>
                     <div class="panel__inner">
-                        BULLENSTEEG--
+                        <span class="site__name site__name--small u-margin-bottom">BULLENSTEEG</span>
                         <h2 class="heading heading-second">Onze Teven</h2>
-                        <div class="read-more">
-                            <a href="#">Lees meer</a>
+                        <div class="read-more u-flex-align-right">
+                            <a href="#" class="read-more__link">Lees meer</a>
                         </div>
                     </div>
 
-                </section>
+                </div>
 
-                <section class="our-pets__reuen panel panel--small">
+                <div class="our-pets__reuen panel panel--small">
                     <div class="reuen__img">
                         <img src="../images/for_html/reu.JPG" alt="">
                     </div>
                     <div class="panel__inner">
-                        BULLENSTEEG--
+                        <span class="site__name site__name--small u-margin-bottom">BULLENSTEEG</span>
                         <h2 class="heading heading-second">Onze Reuen</h2>
-                        <div class="read-more">
-                            <a href="#">Lees meer</a>
+                        <div class="read-more u-flex-align-right">
+                            <a href="#" class="read-more__link">Lees meer</a>
                         </div>
                     </div>
 
-                </section>
+                </div>
 
             </section>
 
-            <section class="news panel panel--taller">
-                News
+            <section class="news">
+                <div class="panel panel--taller">
+                    <div class="news__img">
+                        <img src="../images/for_html/news.JPG" alt="news">
+                    </div>
+
+                    <div class="panel__inner">
+                        <h2 class="heading heading-second">
+                            LKV zomerhappening
+                        </h2>
+                        <div class="read-more">
+                            <a href="#" class="read-more__link">Lees meer</a>
+                        </div>
+                    </div>
+                </div>
             </section>
 
         </div>
 
-        <footer class="footer">
+        <footer class="footer-wrapper">
             <div class="container">
+                <div class="sub-footer">
+                    <div class="sub-footer__btn-contact">
+                        <a href="#" class="btn btn--green u-align-center u-full-width">Contacteer mij</a>
+                    </div>
 
-                <div class="footer__btn-contact">
-                    <a href="#">Contacteer mij</a>
+                    <div class="contact-details">
+                        Marleen Halleng
+                        <br>
+                        marleenhalleng@gmail.com
+                        <br>
+                        Tel: (+32) 497 239 743
+                    </div>
                 </div>
 
-                <div class="footer_contact-information">
-                    Marleen Halleng
-                    <br>
-                    marleenhalleng@gmail.com
-                    <br>
-                    Tel: (+32) 497 239 743
+                <div class="footer">
+                    Copyright © 2018 | BULLENSTEEG - Privacy Policy
                 </div>
+
             </div>
 
         </footer>
