--- a/sass/03-regions/_footer.scss
+++ b/sass/03-regions/_footer.scss
@@ -2,9 +2,19 @@
 // @@ FOOTER
 // ////////////////////////
 
-.footer {
+.footer-wrapper {
   background: $black_gunmetal;
   color: $white;
   min-height: 30rem;
-  padding: 3rem 0;
+  padding: 3rem 0 1rem;
+}
+
+.sub-footer {
+  &__btn-contact {
+    margin: 3rem 0;
+  }
+}
+
+.footer {
+  font-size: calc(#{$base-font-size} - 1rem);
 }
