--- a/sass/04-components/_panels.scss
+++ b/sass/04-components/_panels.scss
@@ -6,9 +6,14 @@
   margin: 0 auto;
   background: $white;
   box-shadow: 0 4px 8px 0 rgba($black-gunmetal, 0.1), 0 6px 20px 0 rgba($black-gunmetal, 0.1);
+  z-index: 1;
 
   &__inner {
     padding: 2rem;
+
+    display: flex;
+    flex-direction: column;
+    
   }
   &--small {
     width: 30rem;
