menu component added

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,176 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link href="https://fonts.googleapis.com/css?family=Archivo|Archivo+Black" rel="stylesheet">
-        <link rel="stylesheet" href="../dist/css/styles.css">
-        <title>De Bullensteeg</title>
-    </head>
-    <body>
 
-        <header class="header">
-            <div class="header__top">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Archivo|Archivo+Black" rel="stylesheet">
+    <link rel="stylesheet" href="../dist/css/styles.css">
+    <title>De Bullensteeg</title>
+</head>
 
-                <div class="site__name heading">
-                    De Bullensteeg
-                </div>
+<body>
 
-                <div class="header__menu">
-                    Menu
-                </div>
+    <header class="header">
+        <div class="header__top">
 
+            <div class="site__name heading">
+                De Bullensteeg
             </div>
 
-            <div class="container">
-                <div class="header__slogan">
-                    <h1 class="heading heading-first">
-                        Franse bulldoggen, grote liefde,
-                        <br>
-                        passie en hobby.
-                    </h1>
+            <div class="header__menu">
+                <div class="navigation">
+                    <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+                    <label for="navi-toggle" class="navigation__button">
+                        <span class="navigation__icon">&nbsp;</span>
+                    </label>
+
+                    <div class="navigation__background"></div>
+
+                    <nav class="navigation__nav">
+                        <div class="navigation__items">
+                            <ul class="navigation__list">
+                                <li class="navigation__item">
+                                    <a href="#" class="navigation__link">Home</a>
+                                </li>
+                                <li class="navigation__item">
+                                    <a href="#" class="navigation__link">Teven</a>
+                                </li>
+                                <li class="navigation__item">
+                                    <a href="#" class="navigation__link">Reuen</a>
+                                </li>
+                                <li class="navigation__item">
+                                    <a href="#" class="navigation__link">Pups</a>
+                                </li>
+                                <li class="navigation__item">
+                                    <a href="#" class="navigation__link">Foto's</a>
+                                </li>
+                                <li class="navigation__item">
+                                    <a href="#" class="navigation__link">Nieuws</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="navigation__site-name">
+                            Bullensteeg
+                        </div>
+                    </nav>
+
                 </div>
-                <div class="header__cta">
-                    <a href="tel:011123456" class="btn btn--green">Contacteer mij.</a>
-                </div>
-                <div class="header__slogan-sub">
-                    <p>
-                        “Mijn honden gezondheid en karakter als prioriteit”
-                    </p>
-                </div>
-                <div class="contact-details contact-details--green contact-details--full-width">
-                    Marleen Halleng
-                    <br>
-                    marleenhalleng@gmail.com
-                    <br>
-                    Tel: (+32) 497 239 743 #1
-                </div>
+                <!-- end navigation -->
             </div>
 
-        </header>
+        </div>
 
-        <section class="aboutus">
-            <div class="aboutus__img">
-                <img src="../images/for_html/about-us.JPG" alt="about us image">
+        <div class="container">
+            <div class="header__slogan">
+                <h1 class="heading heading-first">
+                    Franse bulldoggen, grote liefde,
+                    <br> passie en hobby.
+                </h1>
+            </div>
+            <div class="header__cta">
+                <a href="tel:011123456" class="btn btn--green">Contacteer mij.</a>
+            </div>
+            <div class="header__slogan-sub">
+                <p>
+                    “Mijn honden gezondheid en karakter als prioriteit”
+                </p>
+            </div>
+            <div class="contact-details contact-details--green contact-details--full-width">
+                Marleen Halleng
+                <br> marleenhalleng@gmail.com
+                <br> Tel: (+32) 497 239 743 #1
+            </div>
+        </div>
+
+    </header>
+
+    <section class="aboutus">
+        <div class="aboutus__img">
+            <img src="../images/for_html/about-us.JPG" alt="about us image">
+        </div>
+
+        <div class="container">
+            <div class="aboutus__text">
+                <h2 class="heading heading-second">
+                    Franse Bulldoggen, mijn leven.
+                </h2>
+                <p>
+                    Mijn naam is Halleng Marleen en de Franse Bulldog is in mijn leven gekomen in 2007 tijdens een periode dat ik ziek geworden
+                    ben. Ik had gezelschap nodig en daar is dit ras zeer geschikt voor.
+                </p>
+                <p>
+                    Ondertussen zijn we vele jaren later en zijn er een aantal bulldogjes bij ons gezin komen wonen.
+                </p>
+                <div class="read-more">
+                    <a class="read-more__link" href="#">Lees meer</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="aboutus__bcg"></div>
+
+    </section>
+
+    <div class="container">
+        <section class="pups-expected panel panel--taller">
+
+            <div class="pups-expected__img">
+                <img src="../images/for_html/pups.jpg" alt="Pups">
             </div>
 
-            <div class="container">
-                <div class="aboutus__text">
-                    <h2 class="heading heading-second">
-                        Franse Bulldoggen, mijn leven.
-                    </h2>
-                    <p>
-                        Mijn naam is Halleng Marleen en de Franse Bulldog is in mijn leven gekomen in 2007 tijdens een periode dat ik ziek geworden ben. Ik had gezelschap nodig en daar is dit ras zeer geschikt voor.
-                    </p>
-                    <p>
-                        Ondertussen zijn we vele jaren later en zijn er een aantal bulldogjes bij ons gezin komen wonen.
-                    </p>
-                    <div class="read-more">
-                        <a class="read-more__link" href="#">Lees meer</a>
+            <div class="pups-expected__wrapper">
+                <div class="pups-expected__title">
+                    <div class="heading">
+                        Pups verwacht
                     </div>
                 </div>
+                <div class="read-more u-flex-align-right">
+                    <a href="#" class="read-more__link">Lees meer</a>
+                </div>
             </div>
-
-            <div class="aboutus__bcg"></div>
 
         </section>
 
-        <div class="container">
-            <section class="pups-expected panel panel--taller">
+        <section class="our-pets u-negative-margin-top">
 
-                <div class="pups-expected__img">
-                    <img src="../images/for_html/pups.jpg" alt="Pups">
+            <div class="our-pets__teven panel panel--small">
+
+                <div class="teven__img">
+                    <img src="../images/for_html/teef1.JPG" alt="">
                 </div>
-
-                <div class="pups-expected__wrapper">
-                    <div class="pups-expected__title">
-                        <div class="heading">
-                            Pups verwacht
-                        </div>
-                    </div>
-                    <div class="read-more">
+                <div class="panel__inner">
+                    <span class="site__name site__name--small u-margin-bottom">BULLENSTEEG</span>
+                    <h2 class="heading heading-second">Onze Teven</h2>
+                    <div class="read-more u-flex-align-right">
                         <a href="#" class="read-more__link">Lees meer</a>
                     </div>
                 </div>
 
-            </section>
+            </div>
 
-            <section class="our-pets u-negative-margin-top">
-
-                <div class="our-pets__teven panel panel--small">
-
-                    <div class="teven__img">
-                        <img src="../images/for_html/teef1.JPG" alt="">
-                    </div>
-                    <div class="panel__inner">
-                        <span class="site__name site__name--small u-margin-bottom">BULLENSTEEG</span>
-                        <h2 class="heading heading-second">Onze Teven</h2>
-                        <div class="read-more u-flex-align-right">
-                            <a href="#" class="read-more__link">Lees meer</a>
-                        </div>
-                    </div>
-
+            <div class="our-pets__reuen panel panel--small">
+                <div class="reuen__img">
+                    <img src="../images/for_html/reu.JPG" alt="">
                 </div>
-
-                <div class="our-pets__reuen panel panel--small">
-                    <div class="reuen__img">
-                        <img src="../images/for_html/reu.JPG" alt="">
+                <div class="panel__inner">
+                    <span class="site__name site__name--small u-margin-bottom">BULLENSTEEG</span>
+                    <h2 class="heading heading-second">Onze Reuen</h2>
+                    <div class="read-more u-flex-align-right">
+                        <a href="#" class="read-more__link">Lees meer</a>
                     </div>
-                    <div class="panel__inner">
-                        <span class="site__name site__name--small u-margin-bottom">BULLENSTEEG</span>
-                        <h2 class="heading heading-second">Onze Reuen</h2>
-                        <div class="read-more u-flex-align-right">
-                            <a href="#" class="read-more__link">Lees meer</a>
-                        </div>
-                    </div>
-
-                </div>
-
-            </section>
-
-            <section class="news">
-                <div class="panel panel--taller">
-                    <div class="news__img">
-                        <img src="../images/for_html/news.JPG" alt="news">
-                    </div>
-
-                    <div class="panel__inner">
-                        <h2 class="heading heading-second">
-                            LKV zomerhappening
-                        </h2>
-                        <div class="read-more">
-                            <a href="#" class="read-more__link">Lees meer</a>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-        </div>
-
-        <footer class="footer-wrapper">
-            <div class="container">
-                <div class="sub-footer">
-                    <div class="sub-footer__btn-contact">
-                        <a href="#" class="btn btn--green u-align-center u-full-width">Contacteer mij</a>
-                    </div>
-
-                    <div class="contact-details">
-                        Marleen Halleng
-                        <br>
-                        marleenhalleng@gmail.com
-                        <br>
-                        Tel: (+32) 497 239 743
-                    </div>
-                </div>
-
-                <div class="footer">
-                    Copyright © 2018 | BULLENSTEEG - Privacy Policy
                 </div>
 
             </div>
 
-        </footer>
+        </section>
 
-    </body>
+        <section class="news">
+            <div class="panel panel--taller">
+                <div class="news__img">
+                    <img src="../images/for_html/mystic.jpg" alt="news">
+                </div>
+
+                <div class="panel__inner">
+                    <h2 class="heading heading-second">
+                        In memoriam
+                    </h2>
+                    <div class="read-more u-flex-align-right">
+                        <a href="#" class="read-more__link">Lees meer</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </div>
+
+    <footer class="footer-wrapper">
+        <div class="container">
+            <div class="sub-footer">
+                <div class="sub-footer__btn-contact">
+                    <a href="#" class="btn btn--green u-align-center u-full-width">Contacteer mij</a>
+                </div>
+
+                <div class="contact-details">
+                    Marleen Halleng
+                    <br> marleenhalleng@gmail.com
+                    <br> Tel: (+32) 497 239 743
+                </div>
+            </div>
+
+            <div class="footer">
+                Copyright © 2018 | BULLENSTEEG - Privacy Policy
+            </div>
+
+        </div>
+
+    </footer>
+
+</body>
+
 </html>
