--- a/templates/index.html
+++ b/templates/index.html
@@ -64,26 +64,40 @@
         </div>
 
         <div class="container">
-            <div class="header__slogan">
-                <h1 class="heading heading-first">
-                    Franse bulldoggen, grote liefde,
-                    <br> passie en hobby.
-                </h1>
+        
+            <div class="header__main">
+
+                <div class="header__img">
+                    <img src="../images/for_html/front-img.jpg" alt="front image">
+                </div>
+        
+                <div class="header__slogan">
+                    <h1 class="heading heading-first">
+                        Franse bulldoggen, grote liefde,
+                        <br> passie en hobby.
+                    </h1>
+                </div>
+
+                <div class="header__cta">
+                    <a href="tel:011123456" class="btn btn--green">Contacteer mij.</a>
+                </div>
+
+                <div class="header__slogan-sub">
+                    <p>
+                        “Mijn honden gezondheid en karakter als prioriteit”
+                    </p>
+                </div>
+                
+                <div class="contact-details contact-details--green contact-details--full-width">
+                    Marleen Halleng
+                    <br> marleenhalleng@gmail.com
+                    <br> Tel: (+32) 497 239 743 #1
+                </div>
             </div>
-            <div class="header__cta">
-                <a href="tel:011123456" class="btn btn--green">Contacteer mij.</a>
-            </div>
-            <div class="header__slogan-sub">
-                <p>
-                    “Mijn honden gezondheid en karakter als prioriteit”
-                </p>
-            </div>
-            <div class="contact-details contact-details--green contact-details--full-width">
-                Marleen Halleng
-                <br> marleenhalleng@gmail.com
-                <br> Tel: (+32) 497 239 743 #1
-            </div>
+            <!-- end header__main -->
+        
         </div>
+        <!-- end container -->
 
     </header>
 
