pleased up by now main-header desktop layout

--- a/sass/04-components/_buttons.scss
+++ b/sass/04-components/_buttons.scss
@@ -10,4 +10,11 @@
     background: $green-lighter;
     color: white;
   }
+
+  &--more-padding {
+    @include respond(desktop) {
+      padding: 2rem 8rem;
+    }
+  }
+
 }
