--- a/templates/index.html
+++ b/templates/index.html
@@ -73,13 +73,16 @@
         
                 <div class="header__slogan">
                     <h1 class="heading heading-first">
-                        Franse bulldoggen, grote liefde,
-                        <br> passie en hobby.
+                        Franse bulldoggen, <br> grote liefde, <br> passie en hobby.
                     </h1>
                 </div>
 
                 <div class="header__cta">
                     <a href="tel:011123456" class="btn btn--green">Contacteer mij.</a>
+                </div>
+
+                <div class="header__cta--desktop">
+                    <a href="#" class="btn btn--green btn--more-padding">Contacteer mij via mail.</a>
                 </div>
 
                 <div class="header__slogan-sub">
