--- a/sass/03-regions/_header_front-page.scss
+++ b/sass/03-regions/_header_front-page.scss
@@ -14,6 +14,10 @@
 
     height: 5rem;
     padding: 0 2rem;
+
+    @include respond(tablet) {
+      height: 7rem;
+    }
   }
 
 
@@ -35,7 +39,7 @@
       ".";
 
       grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(3, auto);
+      grid-template-rows: repeat(4, auto);
     }
   }
 
@@ -47,7 +51,7 @@
     @include respond(tablet) {
       display: block;
       grid-column: 2 / -1;
-      grid-row: 1 / 3;
+      grid-row: 1 / 4;
     }
   }
 
@@ -61,19 +65,24 @@
       grid-row: 1 / 2;
     }
 
-    @include respond(desktop) {
-      max-width: 65vw;
-    }
-
-    @include respond(desktop) {
-      max-width:48vw;
-    }
   }
 
   &__cta {
+    display: block;
     grid-area: cta;
 
+
     @include respond(tablet) {
+      display: none;
+    }
+
+  }
+
+  &__cta--desktop {
+    display: none;
+
+    @include respond(tablet) {
+      display: block;
       grid-column: 1 / 3;
       grid-row: 2 / 3;
     }
@@ -89,7 +98,7 @@
     @include respond(tablet) {
       margin: 1rem 0;
       grid-column: 1 / 4;
-      grid-row: 3 / 4;
+      grid-row: 4 / 5;
     }
   }
 
